package lapr4.cafeteria.meal_booking.domain;

public enum BookingStatus {

    /**
     * The booking is confirmed.
     */
    BOOKED,

    /**
     * The meal has been delivered.
     */
    DELIVERED,

    /**
     * The booking has been canceled.
     */
    CANCELED

}
