package lapr4.cafeteria.meal_management.domain;

public enum MealType {
    LUNCH, DINNER;
}
